Make multibrush tool reset axes automatically after resizing of the canvas

Patch by Micahel Zhou

BUG:388307
Differential Revision:https://phabricator.kde.org/D10103